--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>Hello! My name is Joey, I am 23, and I was born and raised right here in Ariozna. I enjoy reading, watching sports, and gaming. </p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I was born in Mesa and I've lived in the valley my entire life. </p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Gaming, reading, cooking, and knowing way too much about football.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Not sure, really.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Central/East Mesa</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I've always enjoyed computers, and the flexibility that being a developer provides opens a lot of doors into that field.</p>
     </section>
 
     <footer id="footer">
